# prediction-market-arbitrage-mvp

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  execution.rs  kalshi.rs  lib.rs  main.rs  polymarket.rs  position_tracker.rs  types.rs
